# conscript

./: .gitignore  CHANGES.md  MANIFEST.in  README.md  RELEASE.md  mypy.ini  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: ci.yml  release.yml
conscript/: __init__.py  main.py
scripts/: changelog.py
tests/: conftest.py  test_main.py
