[build-system]
requires = ["flit_core>=2,<3"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "conscript"
author = "John Sirois"
author-email = "john.sirois@gmail.com"
home-page = "https://github.com/jsirois/conscript"
description-file = "README.md"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 2",
  "Programming Language :: Python :: 2.7",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.5",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Utilities",
]
requires-python = ">=2.7,<3.12,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*,!=3.4.*"
requires = [
  "setuptools; python_version <= '3.5'",
  "importlib-metadata; python_version == '3.6' or python_version == '3.7'",
]

[tool.flit.scripts]
conscript = "conscript.main:main"

[tool.flit.sdist]
include = ["CHANGES.md"]

[tool.flit.metadata.urls]
Changelog = "https://github.com/jsirois/conscript/blob/main/CHANGES.md"
Documentation = "https://github.com/jsirois/conscript/blob/main/README.md"

[tool.black]
line-length = 100
target-version = ["py27"]
exclude = '''
/(
  | \.git
  | \.tox
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100
