[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "conscript"
authors = [
    {name = "John Sirois", email = "john.sirois@gmail.com"},
]
description = "Conscript console scripts in your own Swiss Army Knife."
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Utilities",
]
requires-python = ">=2.7,<3.15,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*,!=3.4.*"
dependencies = [
    "setuptools; python_version <= '3.5'",
    "importlib-metadata; python_version == '3.6' or python_version == '3.7'",
]
dynamic = ["version"]

[project.scripts]
conscript = "conscript.main:main"

[project.urls]
Homepage = "https://github.com/jsirois/conscript"
Changelog = "https://github.com/jsirois/conscript/blob/main/CHANGES.md"
Documentation = "https://github.com/jsirois/conscript/blob/main/README.md"

[tool.setuptools.dynamic]
version = {attr = "conscript.__version__"}

[tool.black]
line-length = 100
target-version = ["py27"]
exclude = '''
/(
  | \.git
  | \.tox
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100
