[metadata]
name = conscript
version = attr: conscript.__version__
author = John Sirois
author_email = john.sirois@gmail.com
description = Conscript console scripts in your own Swiss Army Knife.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jsirois/conscript

project_urls =
    Changelog = https://github.com/jsirois/conscript/blob/main/CHANGES.md
    Documentation = https://github.com/jsirois/conscript/blob/main/README.md

classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: 3.14
    Topic :: Utilities

[options]
packages =
    conscript

python_requires = >=2.7,<3.15,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*,!=3.4.*

install_requires =
    setuptools; python_version <= '3.5'
    importlib-metadata; python_version == '3.6' or python_version == '3.7'

[options.entry_points]
console_scripts =
    conscript = conscript.main:main

[bdist_wheel]
python_tag=py2.py3
